--- a/app/src/main/res/layout/about_info.xml
+++ b/app/src/main/res/layout/about_info.xml
@@ -50,11 +50,11 @@
                 />
 
             <TextView
+                android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="@string/project_info"
-                />
+                android:text="@string/project_info" />
         </LinearLayout>
 
 
