--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:scaleType="center"
                 android:src="@drawable/ic_close_white_24dp"
-                />
+                tools:ignore="ContentDescription" />
 
             <View
                 android:layout_width="0.5dp"
@@ -46,7 +46,7 @@
                 android:text="@string/prompt.select.layout"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
-                />
+                tools:ignore="RtlHardcoded" />
 
             <ImageView
                 android:id="@+id/btn_more"
@@ -54,7 +54,7 @@
                 android:layout_height="50dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/ic_more_vert_white_24dp"
-                />
+                tools:ignore="ContentDescription" />
 
         </LinearLayout>
 
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:paddingBottom="8dp"
             android:src="@drawable/ic_name"
-            />
+            tools:ignore="ContentDescription" />
 
     </LinearLayout>
 
